# ChangeLog for sys-apps/qingy
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/qingy/ChangeLog,v 1.51 2008/04/14 07:24:23 s4t4n Exp $

  14 Apr 2008; Michele Noberasco <s4t4n@gentoo.org> qingy-0.9.6-r2.ebuild:
  Removed, bug #216321

  12 Apr 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  qingy-0.9.6-r3.ebuild:
  Added ~ppc, bug #216321

  05 Apr 2008; Diego Pettenò <flameeyes@gentoo.org> qingy-0.9.6-r3.ebuild:
  Forgot to inherit pam.

*qingy-0.9.6-r3 (05 Apr 2008)

  05 Apr 2008; Diego Pettenò <flameeyes@gentoo.org> +qingy-0.9.6-r3.ebuild:
  Add a new revision making use of pambase, solves bug #216321.

*qingy-0.9.6-r2 (03 Apr 2008)

  03 Apr 2008; Michele Noberasco <s4t4n@gentoo.org> qingy-0.9.6-r2.ebuild:
  Revision bump, with updated PAM file. Closes bug #210829.
  qingy-0.7.4.ebuild:
  Wiped out oldest release.

  22 Nov 2007; Samuli Suominen <drac@gentoo.org> qingy-0.9.6-r1.ebuild:
  amd64 stable as requested and tested by Emil Karlson

  22 Aug 2007; Michele Noberasco <s4t4n@gentoo.org> qingy-0.9.6-r1.ebuild:
  Stable for x86.

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>; qingy-0.7.4.ebuild:
  Drop virtual/x11 references.

*qingy-0.9.6-r1 (20 Jul 2007)

  20 Jul 2007; Michele Noberasco <s4t4n@gentoo.org> qingy-0.9.6-r1.ebuild:
  Revision bump, with updated emacs support as well as some QA.
  Closes bug #184318.
  qingy-0.9.4.ebuild, qingy 0.9.6:
  Wiped out previous versions.
  
*qingy-0.9.6 (26 Apr 2007)

  26 Apr 2007; Michele Noberasco <s4t4n@gentoo.org> qingy-0.9.6.ebuild:
  Version bump.
  qingy-0.9.5.ebuild:
  Wiped out previous version.
  
*qingy-0.9.5 (17 Jan 2007)

  17 Jan 2007; Michele Noberasco <s4t4n@gentoo.org> qingy-0.9.5.ebuild:
  Version bump.
  
  08 Jan 2006; Michele Noberasco <s4t4n@gentoo.org> qingy-0.9.4.ebuild:
  Stable for x86...

*qingy-0.9.4 (21 Dec 2006)
