@@ -1,8 +1,10 @@
 AUX 50qingy-gentoo.el 234 RMD160 f3b6d177b4575ad745be482f1c616d4dca18cb19 SHA1 61c874ce5660c98fd5532bddab75ff546ed32b58 SHA256 f95633e23607471da085fcc888d73ab2c76e838a1426b0698a0a0041651dbd1c
 AUX qingy-logrotate 75 RMD160 4a07170b5898315881dd19a5513336a766207def SHA1 113d03c9db791afa5f928cbb5bf751b31bffcaac SHA256 bf30d9b8a6cf3bf15ff22cd29134e06174fee0ce2aaef4ee383d3c14fe859e44
 DIST qingy-0.9.6.tar.bz2 596883 RMD160 558cca749a33ecc0859a5fcd2aed14eba8600eb8 SHA1 fa00ea1a6188defd2bc77dbab662800b03436c29 SHA256 496f67e043e675f9f7d92a42eb17e1038bb14d93975ff2c09887ddbd3e891822
+DIST qingy-0.9.7.tar.bz2 601784 RMD160 780ef5212714d17a911a09a629ec878eef400c30 SHA1 99f10e06484975c662a9c15223496b5ee55743eb SHA256 2356e7e7049e2a32292800b69ae87e914b4cfbfcef1d6273b377503b64e10b0a
 DIST qingy-gentoo-theme-2.1.tar.bz2 150702 RMD160 24a6792753dbed00bfadcab47e7b048c2f7797b4 SHA1 f94c315ed0a3a52ca9d69afcbd648fba0a06e227 SHA256 1b770255577ed3fc89e1cfdf5019990bf4deffab26201e095084dd5bd97bf093
 EBUILD qingy-0.9.6-r1.ebuild 4721 RMD160 88085475ca66e920ed8327c6803bde44f0c888a4 SHA1 79f6d488fa17d7d37b1556877a014342b728f471 SHA256 14cb0606122080eb144fec901ccf689a9793e2a7ca80f14e6431224aee79abb4
 EBUILD qingy-0.9.6-r3.ebuild 4850 RMD160 68adff8943ac79a57c9634a27ee59d2f1c004596 SHA1 7f153accd43635aaadf7ce8188954a149b87b0e7 SHA256 d376b1686aeb30becf2665d3081286f0a77128c66d32b1ebd669eb23ce4b726c
-MISC ChangeLog 8568 RMD160 e4a24b0a8540a9be1d9f3c84cdc18bd9fcb814dc SHA1 40d2f263391da77c4c5fcc8bb2113985a4ca4cf1 SHA256 4fd5ee1d592bde8a0fa160ff071cf1d730215d014677dec4d6bebdf34a526b21
+EBUILD qingy-0.9.7.ebuild 4842 RMD160 2e20ad429d5f8aa11ceb9f0fb0b30570f5ba9ae7 SHA1 c167bf9b29d589488943bf7eee6ae7b1de61c408 SHA256 cddae88c15efa56b0f8a5ce485387f561933548f5c502abf0827498b9feb5124
+MISC ChangeLog 8686 RMD160 9dd720acfe478318295e0000bd9f48793d4b872c SHA1 07e6c2ea2fd7ff28874755794673d4a7ba9a683c SHA256 55d1709de6bdece2dfc50bcabb716ed823ca6cd36cc044eca15a94b6d75419ea
 MISC metadata.xml 258 RMD160 72ac06ea988b5c02ee83d8208227393f96163029 SHA1 bd7286c13ad729460f1ea593c837aa3ce264c30d SHA256 a6e0ab513611a91cf536305afc90471fc24662b427f58089f009209b545ff4fb
